[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">= 3.10"
name = "netpcf"
version = "0.0.0"
description = "A Python package for computing geometrically-corrected correlation functions over unweighted and weighted networks."
authors = [
    {name = "Joshua Moore", email = "joshua.moore@maths.ox.ac.uk"}
]

maintainers = [
    {name = "Joshua Moore", email = "joshua.moore@maths.ox.ac.uk"}
]

readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
"networkx>= 3.4",
"matplotlib>=3.0",
"numpy>=2.0",
"scipy>=1.14.1",
"setuptools>=72.1.0",
"tqdm>=4.66.4",
"numba>=0.61.2"
]

[tool.setuptools]
packages = ["netpcf"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = ""
Documentation = ""
Repository = "https://github.com/joshwillmoore1/netpcf"


[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
