[build-system]
requires = ["hatchling<=1.18.0"]
build-backend = "hatchling.build"

[project]
requires-python = ">= 3.10"
name = "spacenet"
version = "0.0.1"
description = "A Python package for spatial analysis of spatial networks."
authors = [
    {name = "Joshua Moore", email = "joshua.moore@maths.ox.ac.uk"}
]

maintainers = [
    {name = "Joshua Moore", email = "joshua.moore@maths.ox.ac.uk"}
]

readme = "README.md"
license = { file = "LICENSE" }

dependencies = [
"networkx>= 3.4",
"matplotlib>=3.0",
"numpy>=2.0",
"scipy>=1.14.1",
"scikit-network>=0.33.0",
"setuptools>=72.1.0",
"tqdm>=4.66.4",
"numba>=0.61.2",
"pandas>=2.3.3"
]

[tool.setuptools]
packages = ["spacenet"]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.version]
source = "vcs"

[project.urls]
Homepage = "www.spacenet-python.com"
Documentation = "www.spacenet-python.com"
Repository = "https://github.com/joshwillmoore1/spacenet"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
    "integration",
]
